# qautlra-rs

./: .gitignore  Cargo.toml  README.md  config_ctp.json  config_qq.json  config_sina.json  qamd_client.py
ctp-common/: Cargo.toml  generate.rs
ctp-common-tts/: Cargo.toml  generate.rs
ctp-common-tts/src/: binding.rs  lib.rs
ctp-common/src/: binding.rs
ctp-md/: build.rs
ctp-md-qq/: Cargo.toml  build.rs
ctp-md-qq/examples/: api-md-qq.rs  api.rs
ctp-md-qq/src/: lib.rs
ctp-md-sina/: Cargo.toml  build.rs
ctp-md-sina/examples/: api-md.rs  api.rs
ctp-md-sina/src/: lib.rs
ctp-md/examples/: api-md.rs  api.rs
ctp-md/src/: channel.rs  lib.rs
ctp-trader/: build.rs
ctp-trader/examples/: api-trader.rs  password_update.rs
ctp-trader/src/: lib.rs
doc/: interface.md
docs/: mdgateway-development.md  qadbrs-usage-guide.md  strategy-development.md  websocket-client-guide.md
openctp-trader/: Cargo.toml  build.rs
openctp-trader/examples/: api-trader.rs  password_update.rs
openctp-trader/src/: channel.rs  lib.rs
qamd-rs/: Cargo.toml  LICENSE  README.md
qamd-rs/benches/: serialization.rs
qamd-rs/examples/: basic_usage.rs  daily_data.rs  minute_data.rs
qamd-rs/src/: constants.rs  daily.rs  error.rs  lib.rs  minute.rs  snapshot.rs  tick.rs
qamdgateway/: Cargo.toml  README.md
qamdgateway-ctp/: Cargo.toml
qamdgateway-ctp/examples/: ws_client.rs
qamdgateway-ctp/src/: config.rs
qamdgateway-ctp/src/actors/: md_actor.rs  md_connector.rs  qq_md_actor.rs  sina_md_actor.rs
qamdgateway-qq/: Cargo.toml
qamdgateway-qq/src/: config.rs  error.rs  lib.rs  main.rs  ws_server.rs
qamdgateway-qq/src/actors/: md_actor.rs  md_distributor.rs  messages.rs  qq_md_actor.rs  sina_md_actor.rs
qamdgateway-sina/: Cargo.toml  README.md
qamdgateway-sina/examples/: ws_qq_client.rs
qamdgateway-sina/src/: config.rs  converter.rs
qamdgateway-sina/src/actors/: md_actor.rs  mod.rs  qq_md_actor.rs  sina_md_actor.rs
qamdgateway-sina/src/logging/: mod.rs
qamdgateway/src/: api.rs  config.rs  lib.rs  main.rs  ws_server.rs
qamdgateway/src/actors/: md_actor.rs  md_connector.rs  md_distributor.rs  messages.rs  mod.rs
qautlra-rs/: Cargo.toml  README.md  websocket_client.html
qautlra-rs/src/: lib.rs  main.rs
qautlra-rs/src/actors/: messages.rs  mod.rs
qautlra-rs/src/data/: lfs.rs
qautlra-rs/src/server/: mod.rs
qautlra-rs/src/server/websocket/: mdserver.rs  mdsession.rs  mdspi.rs  mod.rs
qautlra-rs/src/util/: mod.rs  predict.rs  tradedate.rs
xtp-rs/: build.rs
xtp-rs/examples/: example.rs  runbash.sh
xtp-rs/src/: quote_api.rs  quote_spi.rs  sys.rs  trader_api.rs  trader_spi.rs  types.rs
