[package]
name = "qamd-rs"
version = "0.1.0"
edition = "2021"
authors = ["QUANTAXIS"]
description = "Market data protocol library for QUANTAXIS"
license = "MIT"
readme = "README.md"
repository = "https://github.com/QUANTAXIS/qamd-rs"
keywords = ["finance", "market-data", "trading"]
categories = ["finance"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "serialization"
harness = false
