[package]
name = "qamdgateway-qq"
version = "0.1.0"
edition = "2021"
authors = ["QUANTAXIS Team <yutiansut@qq.com>"]
description = "A gateway to connect CTP market data to QAMD-RS data structures"
license = "MIT"
readme = "README.md"

[dependencies]
# CTP and QAMD dependencies
#ctp-md = { path = "../ctp-md", features = ["channel"], version="0.10.0" }
ctp-md-qq = { path = "../ctp-md-qq", features = ["channel"], version="0.0.1" }
#ctp-md-sina = { path = "../ctp-md-sina" , features = ["channel"]}
ctp-common = { path = "../ctp-common", version="0.9.0" }
qamd-rs = { path = "../qamd-rs" , version="0.1.0" }

# Actix dependencies for WebSocket server and actors
actix-web = "4.4"
actix = { version = "0.13.3", features = ["macros"] }
actix-web-actors = "4.2"
actix-cors = "0.6"
actix-broker = "0.4"

# Removed tokio, using actix-rt instead
actix-rt = { version = "2.9", features = ["macros"] }

# Utilities (not using tokio-specific functionality)
futures = "0.3"
async-trait = "0.1"
crossbeam-channel = "0.5"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Logging and configuration
log = "0.4"
env_logger = "0.10"
config = "0.13"
dotenv = "0.15"

# Other utilities
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# WebSocket client example dependencies
tungstenite = "0.21.0"
futures-util = "0.3.31"
url = "2.4"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["connect"] }

[dev-dependencies]
actix-test = "0.1"
mockall = "0.11"
tokio = { version = "1", features = ["full", "macros"] }
tokio-tungstenite = { version = "0.18", features = ["connect"] }
futures = "0.3"

[[bin]]
name = "qamdgateway-qq"
path = "src/main.rs" 