[package]
name = "qamdgateway"
version = "0.1.0"
edition = "2021"
authors = ["QUANTAXIS Team <yutiansut@qq.com>"]
description = "A gateway to connect CTP market data to QAMD-RS data structures"
license = "MIT"
readme = "README.md"

[dependencies]
# 共享依赖
actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
hashbrown ={ version =  "0.15", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }

config = "0.13.3"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
time = "0.3.20"
tokio = { version = "1.27.0", features = ["full"] }

# 数据源依赖
ctp-common = { path = "../ctp-common", version = "0.9.0" }
qamd-rs = { version = "0.1.0" }

# 特性条件依赖
ctp-md = {  path = "../ctp-md", version = "0.10.0", features = ["channel"], optional = true }
ctp-md-qq = {  path = "../ctp-md-qq",version = "0.0.1", features = ["channel"], optional = true }
ctp-md-sina = { path = "../ctp-md-sina", version = "0.10.0", features = ["channel"], optional = true }

# Removed tokio, using actix-rt instead
actix-rt = { version = "2.9", features = ["macros"] }

# Utilities (not using tokio-specific functionality)

async-trait = "0.1"
crossbeam-channel = "0.5"

# Serialization and data handling



# Logging and configuration



dotenv = "0.15"

# Other utilities
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# WebSocket client example dependencies
tungstenite = "0.21.0"
futures-util = "0.3.31"
url = "2.4"


tokio-tungstenite = { version = "0.18", features = ["connect"] }

[dev-dependencies]
actix-test = "0.1"
mockall = "0.11"
tokio = { version = "1", features = ["full", "macros"] }
tokio-tungstenite = { version = "0.18", features = ["connect"] }
futures = "0.3"

[[bin]]
name = "qamdgateway"
path = "src/main.rs" 

[features]
default = ["ctp"]
ctp = ["ctp-md"]
qq = ["ctp-md-qq"]
sina = ["ctp-md-sina"]
all = ["ctp", "qq", "sina"]